custom route /read-seed and /write-seed added

--- a/app/views/includes/header.pug
+++ b/app/views/includes/header.pug
@@ -6,3 +6,5 @@ nav.navbar.navbar-expand-md.navbar-dark.fixed-top.bg-dark
     ul.navbar-nav.mr-auto
       li(class=isActive('/') ? 'active nav-item' : 'nav-item')
         a.nav-link(href="/" title="Home") Home
+        a.nav-link(href="/read-seed" title="Read Seed") Read Seed
+        a.nav-link(href="/write-seed" title="Write Data") Write Data
